--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.in28minutes.springboot.web.application</groupId>
-	<artifactId>spring-boot-web-application-bootstrap-jquery</artifactId>
+	<artifactId>iiwweb</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
