--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>iisweb spring-boot</name>
+    <name>iisweb spring-boot Heroku</name>
     <description>Spring Boot Tutorial - Adding Bootstrap and JQuery to Web Application</description>
 
     <parent>
